# Obsidian-knowledgemap

./: .dockerignore  .env.example  .gitignore  CHANGELOG_IMAGE_SERVING.md  CLASSIFICATION_TASKS.md  DISTRIBUTION.md  DOCKER.md  Dockerfile  HTTPS_SETUP.md  IMPLEMENTATION_SUMMARY.md  MULTI_TAG_IMPLEMENTATION.md  OBSIDIAN_GUIDELINES.md  README.md  README_IMAGE_SERVING.md  STRUCTURED_OUTPUTS.md  ToDo.md  build-and-push.sh  config_example.yaml  create-distribution.sh  debug_hash.py  docker-compose.yml  docker-manage.sh  docker.env.example  llm_config_example.yaml  prompts.yaml  test_api.py
ai/: spec.md  (+7 more)
cli/: BENCHMARK_README.md  IMAGE_SERVING.md  Obsidian.md  README.md  README_SCRIPTS.md  README_SIMPLIFIED.md  STEP4_MONITOR_TRANSFORMATION.md  TAG_NAMING_OPTIONS.md  benchmark_models.py  benchmark_results_20251210_101218.json  build_database_standalone.py  check_vc_classification.py  classification_server.py  classification_task_manager.py  classification_ui.html  cli_spec.md  config_loader.py  debug_failed_note.py  debug_task_loading.py  entity_resolution.py  file_tracker.py  generate_ssl_cert.sh  init_sample_tasks.py  kuzu_neo4j_server.py  kuzu_pool.py  kuzu_server.py  kuzu_server_manager.py  llm_client.py  llm_config_loader.py  main.py  main_obsidian.py  manage_llm_config.py  manual_trigger.py  markdown_transformer.py  metadata_extractor.py  metadata_manager.py  monitor.sh  obsidian_config_reader.py  prompt_loader.py  pyproject.toml  (+20 more)
cli/benchmarks/: BENCHMARK_README.md  benchmark_models.py  benchmark_results_20251210_094644.json  benchmark_results_20251210_095410.json  (+3 more)
(+45 files in other folders)
